# Repeatify

./: .env.example  .gitignore  README.md  dev.sh  prd.md  progress.md  progress.txt  render.yaml  tasks.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  rate_limit.py
backend/app/db/: supabase.py  supabase_client.py
backend/app/models/: auth.py  diagnostic.py  fsrs_card.py  problems.py  progress.py  prototype.py  srs.py  study_plan.py  theory.py  topics.py  video.py
backend/app/routers/: auth.py  diagnostic.py  fsrs.py  problems.py  progress.py  prototypes.py  srs.py  storage.py  study_plan.py  theory.py  topics.py  users.py  variants.py
backend/app/services/: diagnostic_service.py  fsrs_service.py  review_service.py  srs_engine.py  streak_service.py  study_plan_service.py  topic_priority_service.py  xp_service.py
backend/scripts/: import_problems.py
backend/tests/: test_auth.py  test_diagnostic.py  test_e2e_flow.py  test_e2e_v2_flow.py  test_fsrs_api.py  test_fsrs_service.py  test_health.py  test_import_problems.py  test_math100_parser.py  test_migrate_srs_to_fsrs.py  test_normalizer.py  test_predict_score.py  test_problems.py  test_progress.py  test_prototypes.py  test_security.py  test_shkolkovo_parser.py  test_srs.py  test_srs_engine.py  test_streak_service.py  test_study_plan_api.py  test_study_plan_service.py  test_supabase_client.py  test_theory.py  test_topic_priority_service.py  test_topics.py  test_users.py  test_xp_service.py
(+142 files in other folders)
